--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div id="movie-details"></div>
 
     <script>
-        // Replace with your actual API key
+        // API key
         const API_KEY = '2a2acf687e72f8600018b15205a81ce5';
         const BASE_URL = 'https://api.themoviedb.org/3';
         const IMAGE_BASE_URL = 'https://image.tmdb.org/t/p/w500';
